Revision history for Smart-Match

{{$NEXT}}

0.007     2013-05-27 17:12:32 Europe/Amsterdam
          Take into account hash randomization
          Switch to Module::Build::Tiny
          Really surpress experimental warnings

0.006     2013-05-14 20:25:41 Europe/Amsterdam
          Switched to Sub::Exporter::Progressive
          Disable smartmatch warning on 5.17.11+

0.005     2012-07-06 15:23:21 Europe/Bucharest
          Allow numwise and stringwise to return multiple matchers

0.004     2011-07-30 21:49:31 Europe/Amsterdam
          Added hashwise, value, address and sorted_by
          Added sub_hash (nothingmuch)
          Improved contains to allow for multiple values

0.003     2011-07-08 02:17:16 Europe/Amsterdam
          Added contains, sorted and hash_values

0.002     2011-06-08 00:39:45 Europe/Amsterdam
          Renamed from Match-Smart to Smart-Match because Match::Smart was already taken on CPAN

0.001     2011-06-07 12:56:34 Europe/Amsterdam
          Released to an unexpecting world